# University_Event_Management_System

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/apps/events/: admin.py  models.py  serializers.py  tests.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_initial.py
backend/apps/feedback/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/feedback/migrations/: 0001_initial.py  0002_initial.py
backend/apps/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/apps/registrations/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/registrations/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
docs/: UEMS_Technical_Documentation.md  db_schema.md  demo_plan.md  risk_register.md
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/events/: EventCard.jsx  EventFilters.jsx
frontend/src/components/layout/: Layout.jsx  Navbar.jsx
frontend/src/pages/: FeedbackPage.jsx
frontend/src/pages/admin/: AdminDashboardPage.jsx  ManageUsersPage.jsx
frontend/src/pages/auth/: LoginPage.jsx  RegisterPage.jsx
frontend/src/pages/student/: EventsListPage.jsx  (+3 more)
infra/: main.tf
(+2 files in other folders)
